<resources>
    <string name="heading1">Helping Hands</string>
    <string name="desc1">Helping others brings out the richness of mankind in its highest level. Let\'s get together to enlighten another life at least as simply as we can.   This app is slight step towards it in which we expect to make establishments for patients with who are willing to help them. In addition, those are willing to make blood donations can also register and contact the necessary parties.</string>
    <string name="btnNext">Next</string>
    <string name="pusername">User Name</string>
    <string name="ptxt1">Login with your credentials</string>
    <string name="pPwd">Password</string>
    <string name="btnLogin">Login</string>
    <string name="btnSignUp">Sign up</string>
    <string name="pname">Name</string>
    <string name="pemail">Email</string>
    <string name="ppnumber">Phone number</string>
    <string name="btnAcc">Create Account</string>
    <string name="btnEdit">Edit Details</string>
    <string name="btnDelete">Delete Account</string>
    <string name="btnUpdate">Update</string>
    <string name="pmyacc">My Profile</string>
    <string name="btnProfile">My Profile</string>
    <string name="pno">NoOfProfiles</string>
    <string name="pcertify">We are pleased to state that the person who has following details has made a contribution to save life by donating blood to the following blood bank.</string>
    <string name="pn1">name</string>
    <string name="pidnum">ID Number</string>
    <string name="pblbank">Blood Bank</string>
    <string name="pidnum1">id number</string>
    <string name="pblbank1">blood bank</string>
    <string name="pconfirm">Helping Hands Organization</string>
    <string name="pm1">Hey there! Let us know some of your details to issue your certificte.</string>
    <string name="pm2">May we know your regestered code first</string>
    <string name="prcode">RegCode</string>
    <string name="pm3" />
    <string name="pm4">ok fine! We could verify your frankness. Then can you please input  your full name?</string>
    <string name="pidnum2">Finally we want to know your ID number</string>
    <string name="pm5">Thank you very much for your information. Now you can view your certificate.</string>
    <string name="btnCertify">View Certificate</string>
    <string name="pest">Establishments</string>
    <string name="pptn">Patients</string>
    <string name="pblDnt">Blood Donation</string>
    <string name="pusers">"Users "</string>
    <string name="pchat">Chat(only for blood donators)</string>
    <string name="app_name">FirstProject</string>
    <string name="bloodDonation">Number of donaters we have right now</string>
    <string name="BloodDonation">Blood group</string>
    <string name="BloodDonationnum">"number of donas we have "</string>
    <string name="BDCnum">Contact us on 0 112 369 931</string>
    <string name="BDadd">National blood transfursion services ,
        Narahenpita,Elvitigala mavath,
        Colombo</string>
    <string name="hospitalDsc">these labs and hospitals are connected with us.</string>
    <string name="hospitalDis2">You can donate your blood on this locations.</string>
    <string name="hospitalDis3">You can donate your blood on this locations.</string>
    <string name="DisB4">Request</string>
    <string name="DisB3">blood bank</string>
    <string name="DisB2">Labs and hospitals</string>
    <string name="DisB1">blood donation</string>
    <string name="rg">Register</string>
    <string name="rgL1">Full name:-</string>
    <string name="rgL2">Date of birth:-</string>
    <string name="rgL3">Female</string>
    <string name="rgL4">Male</string>
    <string name="rgL5">Weight :-</string>
    <string name="rgL6">Address :-</string>
    <string name="rgL7">Last donate date :-</string>
    <string name="rgL8">Phone</string>
    <string name="pf">ME</string>
    <string name="pfL1">Full name:-</string>
    <string name="pfL2">Date of birth:-</string>
    <string name="pfL3">Female</string>
    <string name="pfL4">Male</string>
    <string name="pfL5">Weight :-</string>
    <string name="pfL6">Address :-</string>
    <string name="pfL7">Last donate date :-</string>
    <string name="pfL8">Phone</string>
<<<<<<< Updated upstream
    <string name="rq">Name</string>/>
    <string-array name="homeType">
        <item>Elder Care Home</item>
        <item>Child Care Home</item>
    </string-array>
=======
    <string name="rq">Name</string>
    <string name="ppname" />
    <string name="ppemail">" "</string>
    <string name="ppnum" />
    <string name="ppuname" />
    <string name="ppwd" />/>
>>>>>>> Stashed changes
</resources>