<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AB58B658"
    tools:context=".Preview">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AB58B658"
        tools:context=".Preview">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="107dp"
            android:layout_height="110dp"
            android:layout_marginTop="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/profile" />

        <TextView
            android:id="@+id/nm"
            android:layout_width="240dp"
            android:layout_height="61dp"
            android:layout_marginTop="48dp"
            android:text="@string/pname"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <TextView
            android:id="@+id/mail"
            android:layout_width="240dp"
            android:layout_height="61dp"
            android:text="@string/pemail"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nm" />

        <TextView
            android:id="@+id/pon"
            android:layout_width="240dp"
            android:layout_height="61dp"
            android:text="@string/ppnumber"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mail" />

        <TextView
            android:id="@+id/unm"
            android:layout_width="240dp"
            android:layout_height="61dp"
            android:text="@string/pusername"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pon" />

        <TextView
            android:id="@+id/pw"
            android:layout_width="240dp"
            android:layout_height="61dp"
            android:text="@string/pPwd"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/unm"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button5"
            android:layout_width="171dp"
            android:layout_height="66dp"
            android:text="@string/btnEdit"
            android:textColor="#D3BBBB"
            app:backgroundTint="#041B05"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pw"
            app:layout_constraintVertical_bias="0.22" />

        <Button
            android:id="@+id/button6"
            android:layout_width="202dp"
            android:layout_height="51dp"
            android:layout_marginTop="24dp"
            android:text="@string/btnDelete"
            android:textColor="#D3BBBB"
            app:backgroundTint="#041B05"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>